force-app/main/default/objects/Validation_Rule__mdt/Validation_Rule__mdt.object-meta.xml
<CustomObject>
    <description>This will be the top level definition for a validation rule, if the criteria defined are then hit a validation error message will fire</description>
    <label>Validation Rule</label>
    <pluralLabel>Validation Rules</pluralLabel>
</CustomObject>