force-app/main/default/objects/Validation_Rule__mdt/fields/Conditional_Logic__c.field-meta.xml
<CustomField>
    <fullName>Conditional_Logic__c</fullName>
    <description>The logic the conditions should perform as, for example (1 and 2 or 3)</description>
    <label>Conditional Logic</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>