force-app/main/default/objects/Validation_Rule__mdt/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>The error message that should be applied if the criteria is hit</description>
    <label>Error Message</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>