force-app/main/default/objects/Validation_Rule__mdt/fields/Validated_Object__c.field-meta.xml
<CustomField>
    <fullName>Validated_Object__c</fullName>
    <description>The object that should be validated for this validation rule, this should be matched on all the criterion records</description>
    <label>Validated Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Validation_Rules</relationshipLabel>
    <relationshipName>Validation_Rules</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>